feat: rename interfaces